use npm/long instead of provided file

--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "node-firebird",
-  "version": "0.6.4",
-  "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
-  "keywords": [
-    "firebird",
-    "database",
-    "rdbms",
-    "sql"
-  ],
-  "homepage": "https://github.com/hgourvest/node-firebird",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hgourvest/node-firebird"
-  },
-  "author": {
-    "name": "Henri Gourvest",
-    "email": "hgourvest@gmail.com"
-  },
-  "contributors": [
-      "Popa Marius Adrian <mapopa@gmail.com>",
-      "Peter \u0160irka <petersirka@gmail.com>"
-  ],
-  "main": "./lib",
-  "licenses" : [
-    {
-      "type" : "MPL-2.0",
-      "url": "https://raw.githubusercontent.com/hgourvest/node-firebird/master/LICENSE"
+    "name": "node-firebird",
+    "version": "0.6.4",
+    "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
+    "keywords": [
+        "firebird",
+        "database",
+        "rdbms",
+        "sql"
+    ],
+    "homepage": "https://github.com/hgourvest/node-firebird",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hgourvest/node-firebird"
+    },
+    "author": {
+        "name": "Henri Gourvest",
+        "email": "hgourvest@gmail.com"
+    },
+    "contributors": [
+        "Popa Marius Adrian <mapopa@gmail.com>",
+        "Peter Širka <petersirka@gmail.com>"
+    ],
+    "main": "./lib",
+    "licenses": [
+        {
+            "type": "MPL-2.0",
+            "url": "https://raw.githubusercontent.com/hgourvest/node-firebird/master/LICENSE"
+        }
+    ],
+    "dependencies": {
+        "long": "^2.2.5"
     }
-  ]
 }
